--- a/Hello World.Tests/Hello World.Tests.csproj
+++ b/Hello World.Tests/Hello World.Tests.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hello World\Hello World.csproj">
